kubernetes/apps/tandoor/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tandoor
  namespace: tandoor
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`recipes.pxldi.de`)
      priority: 10
      services:
        - name: tandoor
          port: 80
